# llm-zoomcamp

./: Makefile  pyproject.toml
pre-workshop/: rag.ipynb
src/: settings.py
