[tool.poetry]
name = "llm-zoomcamp"
version = "0.1.0"
description = "Repo for homeworks and workshops of LLM zoomcamp"
authors = ["jjovalle99 <jj.ovalle@uniandes.edu.co>"]
readme = "README.md"
packages=[{include = "src"}]

[tool.poetry.dependencies]
python = "~3.12"
openai = "^1.34.0"
elasticsearch = "^8.14.0"
pydantic-settings = "^2.3.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
